--- a/app.css
+++ b/app.css
@@ -101,10 +101,10 @@
     background: #ffffff;
   }
   
-  /* .card-text{
+  .card-text{
     font-size: 16px;
     font-weight: bold;
-  } */
+  }
   
   body,
   html {
